objects/MC4SF__MC_Interest_Group__c.object
<CustomObject>
    <fields>
        <fullName>MC4SF__Bit__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Bit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MC4SF__Deleted_In_MailChimp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deleted In MailChimp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MC4SF__Display_Order__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Display Order</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MC4SF__Long_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Long Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MC4SF__MC_Interest_Grouping__c</fullName>
        <label>MC Interest Grouping</label>
        <referenceTo>MC4SF__MC_Interest_Grouping__c</referenceTo>
        <relationshipLabel>MC Interest Groups</relationshipLabel>
        <relationshipName>MC_Interest_Groups</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MC4SF__MailChimp_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>MailChimp ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MC4SF__Subscribers__c</fullName>
        <label>Subscribers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>MC Interest Group</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Interest Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MC Interest Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>